Amended Image Randomizer

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Image Randomizer with NodeJS</title>
 </head>
 <body>
-    <h1>Ovewatch Gif Randomizer</h1>
+    <h1>Overwatch Gif Randomizer</h1>
     <img width="100px" src="/random-image?a" alt="">
     <img width="100px" src="/random-image?b" alt="">
     <img width="100px" src="/random-image?c" alt="">
