added with day 3 code: with handlebars

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <img width="150px" src="/random-image?c" alt="">
     <img width="150px" src="/random-image?d" alt="">
     <img width="150px" src="/random-image?e" alt="">
-    <img width="150px" src="/random-image?f" alt="">
-</body>
+    <img width="150px" src="/random-image?z" alt="">
 
-</html>
+</body>
+</html> 
